first pass backend. hate SQL, want ORM
